<resources>
    <string name="app_name">Polontex</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="password2">Repeat Password</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="report_problem">Report problem</string>
    <string name="plan_a_visit">Plan a visit</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="name">Name</string>
    <string name="are_you_sure_you_want_to_change_your_e_mail">Are you sure you want to change your e-mail </string>
    <string name="are_you_sure_you_want_to_change_your_name">Are you sure you want to change your name </string>
    <string name="are_you_sure_you_want_to_change_your_password">Are you sure you want to change your password </string>
    <string name="previous_password">Previous password</string>
    <string name="yes">YES</string>
    <string name="change_name">Change name</string>
    <string name="enter_a_new_name">Enter a new name</string>
    <string name="change_e_mail">Change e-mail</string>
    <string name="enter_a_new_e_mail">Enter a new e-mail</string>
    <string name="change_password">Change password</string>
    <string name="enter_a_new_password">Enter a new password</string>
    <string name="no">NO</string>
    <string name="short_description_of_visit">Short description of visit</string>
    <string name="select_a_date_of_visit">Select a date of visit</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="enter_type_of_issue">Enter type of issue</string>
    <string name="describe_the_problem">Describe the problem</string>
    <string name="describe_purpose_of_the_visit">Describe purpose of the visit</string>
    <string name="select_a_date">Select a date</string>
    <string name="select_a_time">Select a time</string>
    <string name="date_selected">Date selected:</string>
    <string name="time_selected">Time selected:</string>
    <string name="type_of_problem">Type of problem</string>
    <string name="log_out">Log out</string>
    <string name="action">Action</string>
    <string name="date">Date</string>
    <string name="timestamp">Timestamp</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="add_report">Add Report</string>
    <string name="add_visit">Plan a Visit</string>
    <string name="to">" to "</string>
    <string name="passwords_doesn_t_match">Passwords doesn\'t match</string>
    <string name="update_failed">Update failed</string>
    <string name="update_succeed">Update succeed</string>
    <string name="successfully_deleted">Successfully deleted</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="provide_description_of_visit">Provide description of visit</string>
    <string name="provide_date">Provide date</string>
    <string name="provide_time">Provide time</string>
    <string name="visit_on_that_time_and_date_already_exists">Visit on that time and date already exists</string>
    <string name="visit_added">Visit added</string>
    <string name="invalid_date_cannot_be_in_the_past">Invalid date. Cannot be in the past</string>
    <string name="no_dates">No dates</string>
    <string name="no_visits">No visits</string>
    <string name="no_history">No history</string>
    <string name="enter_email_or_invalid">Enter email or invalid</string>
    <string name="enter_password">Enter password</string>
    <string name="incorrect_email_or_password">Incorrect email or password</string>
    <string name="enter_name_or_taken">Enter name or taken</string>
    <string name="enter_email_taken_or_invalid">Enter email, taken or invalid</string>
    <string name="passwords_does_not_match">Passwords does not match</string>
    <string name="successfully_registered">Successfully registered</string>
    <string name="select_an_issue_type">Select an issue type</string>
    <string name="provide_short_description">Provide short description</string>
    <string name="issue_reported_successfully">Issue reported successfully</string>
    <string name="no_descriptions">No descriptions</string>
    <string name="report_exists">Report exists</string>
</resources>