<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

<group android:checkableBehavior="single">
        <item
            android:id="@+id/mainActivity"
            android:icon="@drawable/baseline_list_alt_24"
            android:title="@string/home"/>
        <item
            android:id="@+id/report"
            android:icon="@drawable/baseline_report_problem_24"
            android:title="@string/report_problem"/>
        <item
            android:id="@+id/plan"
            android:icon="@drawable/baseline_calendar_month_24"
            android:title="@string/plan_a_visit"/>
        <item
            android:id="@+id/history"
            android:icon="@drawable/baseline_360_24"
            android:title="@string/history"/>
        <item
            android:id="@+id/settings"
            android:icon="@drawable/baseline_display_settings_24"
            android:title="@string/settings"/>
</group>
        <item
                android:title="">
                <menu>
                        <item
                        android:id="@+id/logout"
                        android:icon="@drawable/baseline_logout_24"
                        android:title="Log out"/>
                </menu>

        </item>

</menu>