<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="150dp"
                android:background="@drawable/popupbg"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:paddingVertical="20dp"
                android:layout_marginHorizontal="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/are_you_sure_you_want_to_change_your_password"/>

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/previous_password"
                android:layout_marginTop="20dp"
                android:textSize="17sp"
                android:inputType="textPassword"
                android:id="@+id/popup_previous_password"/>

    <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:layout_marginEnd="20dp"
                android:id="@+id/btnYES"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:id="@+id/btnNO"/>

    </LinearLayout>


    </LinearLayout>

</RelativeLayout>