<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/drawer_layout"
        tools:context=".Plan"
        android:fitsSystemWindows="true">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="30dp"
            android:paddingHorizontal="50dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_a_visit"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/textView2"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_description_of_visit"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                android:id="@+id/textView7"/>

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="top"
                android:scrollbars="vertical"
                android:id="@+id/visit_description"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="40dp"
                android:hint="@string/describe_purpose_of_the_visit"
                app:layout_constraintHorizontal_bias="1.0"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:layout_constraintBottom_toTopOf="@+id/datePicker"
                android:text="@string/date_selected"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dateSelected"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:layout_constraintBottom_toTopOf="@+id/datePicker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/select_a_date"
                android:id="@+id/datePicker"
                android:layout_marginTop="30dp"
                android:paddingVertical="15dp"/>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/datePicker"
                app:layout_constraintBottom_toTopOf="@+id/timePicker"
                android:text="@string/time_selected"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timeSelected"
                app:layout_constraintTop_toBottomOf="@+id/datePicker"
                app:layout_constraintBottom_toTopOf="@+id/timePicker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timePicker"
                app:layout_constraintTop_toBottomOf="@+id/datePicker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/select_a_time"
                android:layout_marginTop="30dp"
                android:paddingVertical="15dp"/>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_a_date_of_visit"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/visit_description"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/btnPlan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timePicker"
                android:layout_marginTop="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/nav_menu"
            app:headerLayout="@layout/header"
            app:menu="@menu/main_menu"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:itemIconTint="@color/colorPrimary"/>

</androidx.drawerlayout.widget.DrawerLayout>